WIP mechanics, localstorage

--- a/build_production/index.html
+++ b/build_production/index.html
@@ -16,12 +16,12 @@
         <link rel="home" href="https://blockeveryone.com">
         <link rel="icon" href="/favicon.ico">
 
-        <link rel="stylesheet" href="/assets/build/css/main.css?id=8eabadb79485d1b1dfd951685ef1b1e2">
+        <link rel="stylesheet" href="/assets/build/css/main.css?id=72b5afd1973d0be064c1f5390d59345c">
     </head>
 
     <body class="flex flex-col justify-between min-h-screen bg-gray-100 text-gray-800 leading-normal font-sans">
-        <header class="flex items-center shadow bg-white border-b h-24 py-4" role="banner">
-            <div class="container flex items-center justify-evenly max-w-8xl mx-auto px-4 lg:px-8">
+        <header class="flex items-center shadow bg-white border-b h-24 py-4 px-10" role="banner">
+            <div class="container flex items-center justify-between max-w-8xl mx-auto">
                 <div class="flex justify-end items-center">
                     <img class="h-12 md:h-16 mr-4" src="/assets/img/rank_0.png" id="player-rank-icon">
                     <h2 class="m-0 p-0 text-purple-950" id="player-rank-name">Rookie</h2>
@@ -30,9 +30,9 @@
                 <div class="flex items-center justify-center flex-col min-w-52">
                     <h4 class="m-0 mb-2 p-0 text-sm uppercase font-black">BLOCKS TO NEXT LEVEL</h4>
                     <div class="w-full bg-purple-700 rounded-full h-2.5">
-                        <div class="bg-purple-400 h-2.5 rounded-full" style="width: 45%"></div>
+                        <div class="bg-purple-400 h-2.5 rounded-full" style="width: 0%" id="progress-bar"></div>
                     </div>
-                    <h4 class="m-0 mt-2 p-0 text-sm uppercase font-black">7 LEFT</h4>
+                    <h4 class="m-0 mt-2 p-0 text-sm uppercase font-black" id="progress-left">7 LEFT</h4>
                 </div>
             </div>
         </header>
@@ -64,36 +64,42 @@
                 <div id="gameplay" class="w-full block">
     </div>
     <div class="card">
-        <img class="photo" src="/assets/img/card-temp.png">
+        <div id="photo" class="photo" style="background-image: url('https://picsum.photos/seed/name/482/738')"></div>
         <div class="front">
             <span id='card-title' class="font-bold">Account Name</span>
             <div class="card-button-wrapper">
-                <a href="#" class="text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-1 me-2 mb-2">
+                <a id="instagram" href="#" target="_blank" class="w-full text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-1 me-2 mb-2">
                     Instagram
                 </a>
-                <a href="#" class="text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-1 me-2 mb-2">
+                <a id="tiktok" href="#" target="_blank" class="w-full text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-1 me-2 mb-2">
                     TikTok
                 </a>
-                <a href="#" class="text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-1 me-2 mb-2">
+                <a id="twitter" href="#" target="_blank" class="w-full text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-1 me-2 mb-2">
                     Twitter
                 </a>
             </div>
-            <button class="done-button font-black">
-                SAVE
+            <button id="save-button" class="done-button font-black">
+                DONE
             </button>
         </div>
     </div>
         </main>
 
-        <footer class="bg-white text-center text-sm py-4" role="contentinfo">
-            <ul class="flex flex-col md:flex-row justify-center list-none">
-                <li class="md:mr-2">
-                    Block Everyone. Forever. <a href="https://github.com/blockeveryone/blockeveryone/" target="_blank">Get The Code.</a>
+        <footer class="bg-white text-center text-sm py-4 px-10" role="contentinfo">
+            <ul class="flex md:flex-row justify-evenly list-none max-w-8xl mx-auto">
+                <li class="m-2 w-1/3 text-left">
+                    <a href="https://form.feathery.io/to/qx86hL" target="_blank">Submit A Card</a>
+                </li>
+                <li class="m-2 w-1/3 text-center">
+                    Let them eat cake.
+                </li>
+                <li class="m-2 w-1/3 text-right">
+                    <a href="https://github.com/blockeveryone/blockeveryone/" target="_blank">Get The Code</a>
                 </li>
             </ul>
         </footer>
 
-        <script src="/assets/build/js/main.js?id=ffd1e4ff92cdb90f1a5637ef22abd84e"></script>
+        <script src="/assets/build/js/main.js?id=e942bd914beaa469b170e301d88a8618"></script>
 
             </body>
 </html>
