fresh prod build

--- a/build_production/index.html
+++ b/build_production/index.html
@@ -16,7 +16,7 @@
         <link rel="home" href="https://blockeveryone.com">
         <link rel="icon" href="/favicon.ico">
 
-        <link rel="stylesheet" href="/assets/build/css/main.css?id=866b71da29c275b29e3c40bd50e250cb">
+        <link rel="stylesheet" href="/assets/build/css/main.css?id=b5fa868dd81d1295245228ed0d37511d">
     </head>
 
     <body class="relative flex flex-col justify-between min-h-screen bg-gray-100 text-gray-800 leading-normal font-sans">
@@ -67,20 +67,20 @@
     </ul>
 </nav>
 
-        <main role="main" class="flex-auto w-full container max-w-4xl mx-auto py-0 md:py-16 min-h-[640px] md:min-h-[800px]">
+        <main role="main" class="relative flex-auto w-full container max-w-4xl mx-auto py-0 md:py-16 min-h-[640px] md:min-h-[800px]">
                 <div class="card-wrapper">
         <div class="card">
             <div id="photo" class="photo" style="background-image: url('https://picsum.photos/seed/name/482/738')"></div>
             <div class="front">
-                <span id='card-title' class="font-bold">Account Name</span>
+                <span id='card-title' class="font-bold text-xs">Account Name</span>
                 <div class="card-button-wrapper">
-                    <a id="instagram" href="#" target="_blank" class="w-full text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-1 me-2 mb-2">
+                    <a id="instagram" href="#" target="_blank" class="scale-75 w-full text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-xs px-5 m-0">
                         Instagram
                     </a>
-                    <a id="tiktok" href="#" target="_blank" class="w-full text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-1 me-2 mb-2">
+                    <a id="tiktok" href="#" target="_blank" class="scale-75 w-full text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-xs px-5 m-0">
                         TikTok
                     </a>
-                    <a id="twitter" href="#" target="_blank" class="w-full text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-1 me-2 mb-2">
+                    <a id="twitter" href="#" target="_blank" class="scale-75 w-full text-center text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-xs px-5 m-0">
                         Twitter
                     </a>
                 </div>
@@ -91,19 +91,20 @@
         </div>
     </div>
     <div id="pack-screen">
-        <img src="/assets/img/pack-raw.png">
-    </div>
-    <div id="reward-screen">
-        <h1 id='reward-screen-title' class="mb-8 uppercase text-center"></h1>
-        <img id='reward-screen-rank-img' src="/assets/img/rank_0.png">
-        <h5 id='reward-screen-tagline' class="mb-0 uppercase text-center"></h5>
-        <h1 id='reward-screen-rank-title' class="mt-2 uppercase"></h1>
-        <p id='reward-screen-level' class="mt-0"></p>
-        <button id="level-up-ok" type="button" class="select-none rounded-lg bg-gradient-to-tr from-gray-900 to-gray-800 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-gray-900/10 transition-all hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mt-4"></button>
+        <img src="/assets/img/pack-raw.png" class="w-[250px] h-[375px]">
     </div>
         </main>
 
-        <script src="/assets/build/js/main.js?id=26e103e095e2a280d7a46d113cc8c088"></script>
+        <div id="reward-screen">
+            <h1 id='reward-screen-title' class="mb-2 uppercase text-center"></h1>
+            <img id='reward-screen-rank-img' src="/assets/img/rank_0.png">
+            <h5 id='reward-screen-tagline' class="mt-2 mb-0 uppercase text-center"></h5>
+            <h1 id='reward-screen-rank-title' class="mt-2 uppercase"></h1>
+            <p id='reward-screen-level' class="mt-0"></p>
+            <button id="level-up-ok" type="button" class="select-none rounded-lg bg-gradient-to-tr from-gray-900 to-gray-800 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-gray-900/10 transition-all hover:shadow-lg hover:shadow-gray-900/20 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mt-4"></button>
+        </div>
+
+        <script src="/assets/build/js/main.js?id=6cfd07fc711de4176ab76bd06c7faf2d"></script>
 
             </body>
 </html>
